# termhost

./: .gitignore  AGENTS.md  App.xaml  App.xaml.cs  CLAUDE.md  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  README.md  TerminalHub.csproj  adb-wireless-debugging.md  alacritty-embed.toml  example-config.json  index.html  make_icon.mjs  mobile.html  opencode-compaction-guide.md  opencode.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.mobile.config.ts
.github/workflows/: ci.yml
.memory/: README.md  _index.md
.memory/architecture/: android-app.md  daemon-architecture.md  overview.md  split-tree-layout.md  tech-stack.md
.memory/decisions/: dual-codebase.md  vanilla-js.md
.memory/domain/: mobile-remote-access.md  similar-projects.md  workspace-model.md
.memory/gotchas/: frontend-monolith.md  platform-assumptions.md  xterm-css-pitfalls.md  xterm-scrollbar-strategy.md
.memory/patterns/: state-management.md  tauri-ipc.md
Controls/: TerminalHostPanel.cs
Models/: WorkspaceConfig.cs
Services/: ConfigService.cs  TerminalEmbedder.cs
android/: .gitignore  BUILD.md  build-android.ps1  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/termhost/android/: BootReceiver.kt  DaemonService.kt  MainActivity.kt
android/app/src/main/res/drawable/: ic_notification.xml
android/app/src/main/res/values/: strings.xml  themes.xml
daemon/: Cargo.toml
daemon/android-jni/: Cargo.toml
daemon/android-jni/src/: lib.rs
daemon/src/: android_main.rs  buffer.rs  error.rs  hid.rs  lib.rs  main.rs  pty_client.rs  pty_ipc.rs  pty_manager.rs  screen.rs  screen_capture.rs  sleep_blocker.rs  tray.rs  webrtc_stream.rs  ws_server.rs
docs/: PROJECT_CONTEXT.md  STACK_DECISIONS.md  TERMINAL_RESEARCH_2026.md
public/: manifest.json  mobile-manifest.json  sw.js
scripts/: add-to-path.ps1  fetch-usage.mjs  mk-shortcut.ps1
shared/: Cargo.toml
shared/src/: protocol.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  mobile-client.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/app/: Cargo.toml  tauri.conf.json
src-tauri/crates/app/capabilities/: default.json
src-tauri/crates/app/src/: daemon_client.rs  lib.rs  main.rs
src-tauri/crates/daemon/: Cargo.toml
src-tauri/crates/daemon/src/: buffer.rs  main.rs  pty_manager.rs
src-tauri/crates/shared/: Cargo.toml
src-tauri/crates/shared/src/: protocol.rs
src-tauri/src/: lib.rs  main.rs  pty_manager.rs  workspace_manager.rs  ws_server.rs
src/components/: QRLogin.tsx
src/components/fileviewer/: FileViewer.module.css  FileViewer.tsx  MarkdownPreview.tsx  MonacoEditor.tsx
src/components/graph/: NoteGraph.module.css  NoteGraph.tsx
src/components/pages/: AllTerminals.tsx  Dashboard.tsx  Pages.module.css  PairingPage.tsx  SettingsPage.tsx  WorkspaceEditor.tsx
src/components/panels/: BrowserPanel.tsx  ExplorerPanel.tsx  FilesContent.tsx  FilesPanel.tsx  GitPanel.tsx  McpPanel.tsx  PairingPanel.tsx  Panels.module.css  SettingsPanel.tsx  SshPanel.tsx  TranslatePanel.module.css  TranslatePanel.tsx
src/components/search/: SearchBar.module.css  SearchBar.tsx
src/components/sidebar/: Sidebar.module.css  Sidebar.tsx
src/components/splitpane/: SplitContainer.tsx  SplitDivider.tsx  SplitPane.module.css
src/components/terminal/: PaneHeader.tsx  PaneManager.module.css  PaneManager.tsx  SearchBar.tsx  Terminal.module.css  TerminalInstance.tsx  TerminalPane.tsx
src/components/titlebar/: CloseDialog.module.css  CloseDialog.tsx  DaemonIndicator.module.css  DaemonIndicator.tsx  Titlebar.module.css  Titlebar.tsx  VoiceInput.tsx
src/components/translate/: TranslateTooltip.module.css  TranslateTooltip.tsx
src/constants/: fileIcons.ts  presets.ts  themes.ts  wsTemplates.ts
src/hooks/: useDividerDrag.ts  useKeyboardShortcuts.ts  usePinchZoom.ts  useResizeObserver.ts  useSplitTree.ts  useTauriIpc.ts  useTranslate.ts
src/mobile/: App.tsx  App.tsx.clean  api.ts  haptics.ts  main.tsx  types.ts
src/mobile/components/: ClipboardPage.tsx  CommandPalette.tsx  ConnectScreen.tsx  CustomizeToolbar.tsx  FilePreview.tsx  FilesPage.tsx  GitDiffView.tsx  Home.tsx  Icon.tsx  InputRow.tsx  ScreenView.tsx  SearchBar.tsx  Settings.tsx  SnippetBar.tsx  TabBar.tsx  Toast.tsx  Toolbar.tsx  WorkspacePicker.tsx
src/mobile/hooks/: useSocket.ts
src/mobile/store/: mobileStore.ts
src/mobile/styles/: mobile.css
src/store/: browserStore.ts  fileBrowserStore.ts  fileViewerStore.ts  panelStore.ts  settingsStore.ts  sshStore.ts  terminalStore.ts  workspaceStore.ts
src/styles/: global.css  markdown.css
src/types/: index.ts
