[workspace]
members = [".", "crates/daemon", "crates/shared"]
exclude = ["crates/app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "terminal-hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "terminal_hub_lib"
path = "crates/app/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "terminal-hub"
path = "crates/app/src/main.rs"

[dependencies]
terminalhub-shared = { path = "crates/shared" }
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
url = "2"
tauri-utils = "2"
tokio = { version = "1", features = ["sync", "net", "rt", "io-util", "time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
