[package]
name = "termhost"
version = "0.1.0"
edition = "2021"

[lib]
name = "termhost_lib"
path = "crates/app/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "termhost"
path = "crates/app/src/main.rs"

[dependencies]
termhost-shared = { path = "../shared" }
tauri = { version = "2", features = ["protocol-asset", "unstable", "tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
url = "2"
tauri-utils = "2"
tokio = { version = "1", features = ["sync", "net", "rt", "io-util", "time"] }
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }
windows-core = "0.61"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
