[package]
name = "terminal-hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "terminal_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "terminal-hub"
path = "src/main.rs"

[dependencies]
terminalhub-shared = { path = "../shared" }
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
url = "2"
tauri-utils = "2"
tokio = { version = "1", features = ["sync", "net", "rt", "io-util", "time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
