[package]
name = "terminalhub-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terminalhub-daemon"
path = "src/main.rs"

[dependencies]
terminalhub-shared = { path = "../shared" }
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
dirs = "6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "winbase", "handleapi"] }
